fix contrast error

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ h2 {
 img {
     float: right;
     box-shadow: 0 0 30px;
-    
     width: 300px;
     height: 400px;
     object-fit: cover;
@@ -40,7 +39,7 @@ li {
     margin: 1em;
 }
 body {
-    background-color: #5DA399;
+    background-color: #BEDAD6;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     color: #35393C;
@@ -61,9 +60,8 @@ footer {
     left: 0;
     font-size: 20px;
 }
-
 footer a {
-    color: #5DA399
+    color: #BEDAD6
 }
 footer a:hover {
     color:#397367;
